compiler/tests/en/errors/bad_cast.salam
// EXPECT: E023
func main:
    s auto = "x"
    n auto = s as i32
end
